# claude-proxy-rs

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  claude-proxy.service  justfile  test_anthropic.py  test_openai.py
.githooks/: pre-commit
.github/workflows/: ci.yml
.sqlx/: query-0325d8ae3b3aac58f9c9bf618cc0ab2e17e4c0ce572da9cadfa9e242bf221420.json  query-036b8553a865f52b0b0634e01dcc0dfcf20cd3203d7d05051cbd07560ffc9503.json  query-0707d2bf5c20d733c5f3f683efe129c317dcc9908b84247890cdf780dcbabce8.json  query-094001f5b8b984c41bae3697c1d6dce18abfa1edd3db6bb818aea846716c0ffa.json  query-0aead748fc345f3658e9b9ca815d4b7e2984c5fe671e065c6f048d05f15e5637.json  query-1398626d6d272e7f0c217a118f972776bc71160258ae6594663eeacc8a6c228d.json  query-15065568abf70cc0c346cb3b47f93b70deffb7cedab374d5cd849994bac35745.json  query-162c0e0a002aec08d76223d39318a58cff67c0cf2e8af4ee677ea3d8e6524724.json  query-187a06a3fa9962a02f509aebe9bb82e564eb3769912758a46c4b1f8c6f45b907.json  query-1a425911037ac1ee0268f44bfdf463900fa33076bd96cc6b8bd5c2c55368312c.json  query-1d2acd8366d2cf08b779a779dc98e5f80f6fbf332801db00b16fb7747303c65b.json  query-1d4b9958ade78b43df32dc4cbd4d7664620c7dff01882f7cbefa520b5cfd0b07.json  query-1e68156d5ab46e52300942741fb021dc871ad9b2450f73d452a029b12f813e18.json  query-1ec7965d35de5565adaf85d2db603224cf019ea5d9db373761924e21d14aa1a0.json  query-1fc3e794fdfa88bc704bf91067657292873d88ec2279c3d9d3b7ed21911837ab.json  query-2244ff6014eae137999860b0b46f4ee0d707dc96e7537317b65c95ceedcccdad.json  query-23ab5abf61bcd6514dc0918700e46fc526df5cca4a3b196f62a2d9f51d04f04c.json  query-3101ef04ff5a935317f25d16b353cc8955ea791001c6cf448c4f91b0f935ba40.json  query-321c994289c2974e2d01039063e63cc116021f72ef59994e469d7d011d12713f.json  query-32300a4a2017d9d125ace26f599ce9559b0792ae5d823d11f4ac2a0ac84574b3.json  query-340375e08174691d24c21cfcc3fb2cee2053ae530c0d795a6bf2ca1e17e6fe83.json  query-35d398f19ccf02e9d6c23ba0c45f277e20cec0e27d8cb3c1387e35795238cf92.json  query-36e1a89c758e3472736745378efb5d57d7bbca5a195c18d95d8055280ef2d10f.json  query-3841ba797f3125af1e9abf27ae1b14df48475ccf9c2aa9035d1053942f7377b0.json  query-3b9788d01b67a2c2cb6df59234c0951c88a45cfeac6044674f38caff5310ca5e.json  query-4d89636f859376093a1873e5f04df7561bcabfb76b579d07e0558999874823e2.json  query-5217905b85130abeb62aa86a41358564f49a160bfb3ad236050150311d64dfac.json  query-584dc0fd653265ca6107d7a7c8660284a661b8e3de31e9e8f51a36037086624b.json  query-5994cb109492c556629b87c3b7724ab69112c5b89d3b68b8dd838a76c3751ac7.json  query-5ca4cae82a48e2f40bf2991feb939789d18a4a0dbf6d52fdfcca65aae0fe94b0.json  query-5ca969c9f3cc828251407f00c9b3556550370c80c81b1443a7c3f0ee88360730.json  query-5d7481687dce458eada6e990000055b555400a66d3c98edac11d6757b045962e.json  query-6d0ce6f62246cb4f0c9a26f0290542be805f68be25a308fef9036c7d5c135466.json  query-77cad24c61ae92dd1b10c75c537e7a3393ab8d23c7d6ddc874071ac7e3f077c9.json  query-7a9dea839a3b4ac09e67e55d79a3ddf2699440c1a1082d2b2fe4e2b17e52942c.json  query-7b3b65d6902cfbdf0003dbb9281a4b8281a8c7d997668d700c0a20144e915c6b.json  query-7d7029b0e3c50bc32bab7599a346ce8133fc9147eb5f4d5ee093582e84e8c32c.json  query-85f14a2499e0194f808d4db3840eda94f141bc4065a6986863ee679c0fe7769b.json  query-86a6b098c9a244e9c0f9f12ff8f0b992fd30b9413611c3efaf84edf788975a39.json  query-87c13848c7377b9b9fddfc33362467a120872e8b64c00269a60aac483a02b10c.json  (+42 more)
admin-ui/: auto-imports.d.ts  components.d.ts  eslint.config.ts  index.html  openapi-ts.config.ts  openapi.json  package.json  tsconfig.app.json  vite.config.ts
admin-ui/src/: main.ts
migrations/: 0001_current_schema.sql  0002_boolean_flags.sql
src/: admin_session.rs  capture.rs  config.rs  constants.rs  db.rs  error.rs  main.rs  subscription.rs
(+65 files in other folders)
