[package]
name = "claude-proxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.8"
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.5.57", features = ["derive", "env"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
memory-serve = "2.0.0-beta.0"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["form", "json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit", "timeout", "buffer"] }
tower-http = { version = "0.6.8", features = ["cors", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
turso = "0.5.0-pre.8"
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[build-dependencies]
memory-serve = "2.0.0-beta.0"
