[package]
name = "claude-proxy-rs"
version = "1.2.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
async-stream = "0.3.6"
anyhow = "1.0"
axum = "0.8.8"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive", "env"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
llm-relay = { version = "0.2.2", default-features = false }
memory-serve = "2.0.0-beta.0"
rand = "0.10"
reqwest = { version = "0.13.1", features = ["form", "json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
subtle = "2.6.1"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit", "timeout", "buffer"] }
tower-http = { version = "0.6.8", features = ["cors", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
aegis = { version = "0.9.7", features = ["pure-rust"] }
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate"] }

[build-dependencies]
chrono = "0.4.43"
memory-serve = "2.0.0-beta.0"

[lints.clippy]
# Extra production guardrails. Keep noisy style categories out; run with
# `-D warnings` locally and in CI so these warnings are blocking there.
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"

mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"

rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"
